services/gateway/kubernetes/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      name: gateway
      labels:
        app: gateway
    spec:
      automountServiceAccountToken: false
      containers:
        - name: gateway
          image: localhost:32000/service-gateway:${tag_version}
          imagePullPolicy: Always
          resources:
            requests:
              memory: "256Mi"
              cpu: "0.5"
            limits:
              memory: "256Mi"
              cpu: "0.5"
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 1
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 1
            terminationGracePeriodSeconds: 15
          startupProbe:
            httpGet:
              port: 8080
              path: /actuator/health
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 1
            terminationGracePeriodSeconds: 15
      restartPolicy: Always
